[FIX] mass_mailing: fix overlap issues with mass_mailing_html_field
This commit fixes multiple issues related to the mass_mailing_html_field used
in `marketing_automation` and in `mass_mailing` modules.

1) The iframe scrollbar hidden behind the snippets sidebar in fullscreen mode
- concerns: mass_mailing, marketing_automation

How to reproduce:
- create a new mailing in email marketing
- choose Event Promo as the Email Template
- open in fullscreen
Issue:
- The iframe scrollbar is hidden

Solution:
- Add the padding for the snippets sidebar on the `iframe` element instead of on
  the `o_layout` element inside the iframe

2) The snippets sidebar overlaps with the content
- concerns: mass_mailing, marketing_automation

How to reproduce:
- create a new mailing in email marketing
- choose Event Promo as the Email Template
- save the changes and close the edition
- open the same mailing again
- zoom in
Issue:
- the snippets sidebar overlaps with the content

Solution:
- Multiple functions can ultimately change the "folded" state of the snippets
  menu. A `useEffect` based on `showSnippetsMenu` and `snippetsMenuFolded` will
  add or remove a class which will add/remove a padding for the iframe element,
  allowing enough space for the snippets sidebar when it is not folded.

3) The snippets sidebar height in a dialog is too big
- concerns: marketing_automation

How to reproduce:
- create a new marketing campaign and add a new Email activity
- create a new mail template
- choose Event Promo as the Email Template
- scroll the rightmost scrollbar until the bottom
Issue:
- the snippets sidebar bounding rectangle was not fully visible until the dialog
  scrollbar was scrolled to the bottom

Solution:
- Update `_repositionMailingEditorSidebar` to compute a specific sidebar height
  when the html field is in a dialog.

4) The edition dialog for the marketing campaign overlaps the fullscreen editor
of the mail template destined to that marketing campaign.
-concerns: marketing_aut

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -29,6 +29,11 @@ $o-we-zindex: $o-we-overlay-zindex + 1 !default;
     padding: 0;
 }
 
+// Prevent the website snippets sidebar from overlapping the template
+.wysiwyg_iframe.o_iframe.has_snippets_sidebar {
+    padding-right: $o-we-sidebar-width !important;
+}
+
 // Colorpicker - Generic rules shared among backend & frontend
 .colorpicker {
 
